# meet-and-eat-distribution-tool

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  READEME.md  README.md
libmue/: .ycm_extra_conf.py  CMakeLists.txt  config.h  distance.cpp  distances.h  firstround_select.cpp  firstround_select.h  guest_tuple_iterator.cpp  guest_tuple_iterator.h  mue_algorithm.cpp  mue_algorithm.h  seen_table.cpp  seen_table.h  team_container.h  teams.cpp  teams.h
libmue/tests/: CMakeLists.txt  helper.cpp  helper.h  simple.h  test_calculation.h  test_distances.h  test_firstround_select.h  test_guest_permutation_iterator.h  test_guest_tuple_iterator.h  test_seen_table.h  test_teams.h
mue/: CMakeLists.txt  integration_test.py  mue.py
prototype/: algorithm_prototype.py
pymue/: .ycm_extra_conf.py  CMakeLists.txt  __init__.py  calculation_wrapper.cpp  calculation_wrapper.h  conversion_helper.cpp  conversion_helper.h  guest_tuple_iterator_wrapper.cpp  guest_tuple_iterator_wrapper.h  pymue.cpp  scoped_gil.cpp  scoped_gil.h  seen_table_wrapper.h
scripts/: run_container.sh
